# pylidort

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  meson.build  pyproject.toml
.github/workflows/: test.yml
ci/conda-envs/: doc-env.yml  mamba-build.yml
conda.recipe/: meta.yaml  osx_arm64_.yaml
docs/sphinx/source/: conf.py  index.md
lib/lidort_def/: lidort_inputs_def.f90  lidort_io_defs.f90  lidort_lin_inputs_def.f90  lidort_lin_io_defs.f90  lidort_lin_outputs_def.f90  lidort_lin_sup_brdf_def.f90  lidort_lin_sup_def.f90  lidort_lin_sup_sleave_def.f90  lidort_lin_sup_ss_def.f90  lidort_outputs_def.f90  lidort_pars.f90  lidort_sup_brdf_def.f90  lidort_sup_def.f90  lidort_sup_sleave_def.f90  lidort_sup_ss_def.f90
lib/lidort_f2py/: lidort.f90
lib/lidort_focode/: FO_DTWPgeometry_master.f90  FO_Planckfunc.f90  FO_SSWPgeometry_master.f90  FO_ScalarSS_RTCalcs_I.f90  FO_ScalarSS_RTCalcs_ILCS.f90  FO_ScalarSS_RTCalcs_ILPS.f90  FO_ScalarSS_Spherfuncs.f90  FO_Taylor.f90  FO_Thermal_RTCalcs_I.f90  FO_Thermal_RTCalcs_ILCS.f90  FO_Thermal_RTCalcs_ILPS.f90  FO_WPgeometry_Routines.f90  FO_geometry_Generic.f90  SFO_LinMasters.f90  SFO_Master.f90
lib/lidort_main/linearized/: lidort_l_inputs.f90  lidort_l_thermalsup.f90  lidort_l_writemodules.f90  lidort_la_miscsetups.f90  lidort_lbbf_jacobians.f90  lidort_lc_PostProcessing.f90  lidort_lc_bvproblem.f90  lidort_lc_mediaprops.f90  lidort_lc_mediaprops_orig.f90  lidort_lc_miscsetups.f90  lidort_lc_wfatmos.f90  lidort_lcs_converge.f90  lidort_lcs_masters_V3p8p3.f90  lidort_lp_PostProcessing.f90  lidort_lp_bvproblem.f90  lidort_lp_mediaprops.f90  lidort_lp_mediaprops_orig.f90  lidort_lp_miscsetups.f90  lidort_lp_wfatmos.f90  lidort_lpc_solutions.f90  lidort_lps_converge.f90  lidort_lps_masters_V3p8p3.f90  lidort_ls_wfsleave.f90  lidort_ls_wfsurface.f90  lidort_sfo_lcs_interface.f90  lidort_sfo_lps_interface.f90
lib/lidort_main/regular/: lidort_PostProcessing.f90  lidort_Taylor.f90  lidort_aux.f90  lidort_bvproblem.f90  lidort_converge.f90  lidort_geometry.f90  lidort_getplanck.f90  lidort_inputs.f90  lidort_inputs.f90.orig  lidort_intensity.f90  lidort_masters_V3p8p3.f90  lidort_mediaprops.f90  lidort_miscsetups.f90  lidort_sfo_interface.f90  lidort_solutions.f90  lidort_thermalsup.f90  lidort_writemodules.f90
src/pylidort/: __init__.py  _version.py
src/pylidort/lidort/: __init__.py  pars.py
src/pylidort/lidort/input/: __init__.py  fixed.py  modified.py
src/pylidort/lidort/output/: __init__.py
tests/: test_lidort.py
